Generative modifiers (Bevel, Triangulate, ...) wireframe not drawn correctly in Edit Mode #103706

Closed
opened 2023-01-07 02:03:35 +01:00 by Chris Plush · 8 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29

Blender Version
Broken: 3.4.1 and 3.5.0 Alpha
Worked: 3.3.1

Caused by b247588dc0

Short description of error
The Bevel modifier's resulting wireframe is not drawn correctly in Wireframe Shading when in Edit Mode. There are missing edges. This may be related to another bug I submitted about Optimal Display not working correctly for Subdivision Surface (https://developer.blender.org/T103700). I think both of these drawing bugs appeared at the same time after version 3.3.1.

Exact steps for others to reproduce the errors

  • Add a bevel Modifier to the default cube.
  • Go into Wireframe Shading. (Everything looks as expected)

Tab into Edit Mode. (Parts of the wireframe are now missing, and the results are not complete)

Results
bevel-bug.jpg

Thanks!

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29 **Blender Version** Broken: 3.4.1 and 3.5.0 Alpha Worked: 3.3.1 Caused by b247588dc0 **Short description of error** The Bevel modifier's resulting wireframe is not drawn correctly in Wireframe Shading when in Edit Mode. There are missing edges. This may be related to another bug I submitted about Optimal Display not working correctly for Subdivision Surface (https://developer.blender.org/T103700). I think both of these drawing bugs appeared at the same time after version 3.3.1. **Exact steps for others to reproduce the errors** - Add a bevel Modifier to the default cube. - Go into Wireframe Shading. (Everything looks as expected) # Tab into Edit Mode. (Parts of the wireframe are now missing, and the results are not complete) **Results** ![bevel-bug.jpg](https://archive.blender.org/developer/F14129888/bevel-bug.jpg) Thanks!
Author

Added subscriber: @blengine

Added subscriber: @blengine

#104281 was marked as duplicate of this issue

#104281 was marked as duplicate of this issue

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @brecht, @deadpin

Added subscribers: @brecht, @deadpin

A git bisect seems to blame b247588dc0

CC @brecht

A git bisect seems to blame b247588dc0 CC @brecht

Added subscriber: @MarkKhorb

Added subscriber: @MarkKhorb

Added subscriber: @Wovchick

Added subscriber: @Wovchick
Philipp Oeser changed title from Bevel Modifier wireframe not drawn correctly in Edit Mode to Generative modifiers (Bevel, Triangulate, ...) wireframe not drawn correctly in Edit Mode 2023-02-01 17:44:03 +01:00
Member

Added subscribers: @Morphin, @lichtwerk, @PratikPB2123

Added subscribers: @Morphin, @lichtwerk, @PratikPB2123
Philipp Oeser removed the
Interest
EEVEE & Viewport
label 2023-02-09 15:11:55 +01:00
Brecht Van Lommel added this to the 3.5 milestone 2023-02-15 10:26:16 +01:00
Brecht Van Lommel self-assigned this 2023-02-15 10:56:42 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-02-15 10:56:46 +01:00
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-03-07 21:50:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103706
No description provided.