source/blender/draw/intern/mesh_extractors/extract_mesh_ibo_lines.cc
@@ -58,7 +58,7 @@ static void extract_lines_iter_poly_mesh(const MeshRenderData *mr,
   GPUIndexBufBuilder *elb = static_cast<GPUIndexBufBuilder *>(data);
   /* Using poly & loop iterator would complicate accessing the adjacent loop. */
   const MLoop *mloop = mr->mloop;
-  const int *e_origindex = (mr->edit_bmesh) ? mr->e_origindex : nullptr;
+  const int *e_origindex = (mr->hide_unmapped_edges) ? mr->e_origindex : nullptr;
   if (mr->use_hide || (e_origindex != nullptr)) {
     const int ml_index_last = mp->loopstart + (mp->totloop - 1);
     int ml_index = ml_index_last, ml_index_next = mp->loopstart;
@@ -109,7 +109,7 @@ static void extract_lines_iter_ledge_mesh(const MeshRenderData *mr,
   GPUIndexBufBuilder *elb = static_cast<GPUIndexBufBuilder *>(data);
   const int l_index_offset = mr->edge_len + ledge_index;
   const int e_index = mr->ledges[ledge_index];
-  const int *e_origindex = (mr->edit_bmesh) ? mr->e_origindex : nullptr;
+  const int *e_origindex = (mr->hide_unmapped_edges) ? mr->e_origindex : nullptr;
   if (!((mr->use_hide && mr->hide_edge && mr->hide_edge[med - mr->medge]) ||
         ((e_origindex) && (e_origindex[e_index] == ORIGINDEX_NONE)))) {
     const int l_index = mr->loop_len + ledge_index * 2;
@@ -183,8 +183,8 @@ static void extract_lines_loose_geom_subdiv(const DRWSubdivCache *subdiv_cache,
 
   switch (mr->extract_type) {
     case MR_EXTRACT_MESH: {
-      const int *e_origindex = (mr->edit_bmesh) ? mr->e_origindex : nullptr;
-      if (mr->e_origindex == nullptr) {
+      const int *e_origindex = (mr->hide_unmapped_edges) ? mr->e_origindex : nullptr;
+      if (e_origindex == nullptr) {
         const bool *hide_edge = mr->hide_edge;
         if (hide_edge) {
           for (DRWSubdivLooseEdge edge : loose_edges) {
